--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -14,8 +14,7 @@
   <title>Kasa</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body id="root">
   <script type="module" src="/src/route.jsx"></script>
 </body>
 
