--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <title>Kasa</title>
 </head>
 
-<body id="root">
-  <script type="module" src="/src/route.jsx"></script>
+<body>
+  <div id="root">
+    <script type="module" src="/src/route.jsx"></script>
+  </div>
 </body>
 
 </html>
